force-app/main/default/objects/LeadConversionMapping__c/LeadConversionMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Lead Conversion Mapping</label>
</CustomObject>