force-app/main/default/objects/LeadConversionMapping__c/fields/SourceFieldName__c.field-meta.xml
<CustomField>
    <fullName>SourceFieldName__c</fullName>
    <label>Source Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>