force-app/main/default/objects/LeadConversionMapping__c/fields/TargetFieldName__c.field-meta.xml
<CustomField>
    <fullName>TargetFieldName__c</fullName>
    <label>Target Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>