force-app/main/default/objects/LeadConversionMapping__c/fields/TargetObjectName__c.field-meta.xml
<CustomField>
    <fullName>TargetObjectName__c</fullName>
    <label>Target Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>